# RPI5-DDS-setup

./: .gitignore  CLAUDE.md  DDS_테스트_시나리오.md  README.md
captures/: dds.pcapng  dds_auto_sub_raspberrypi_20260623_081859.pcap  dds_auto_sub_raspberrypi_20260623_085510.pcap
docs/: wireshark_분석가이드.md  패킷분석_상세.md
examples/dds_test/: CMakeLists.txt  README.md  auto_pub.cpp  auto_sub.cpp  publisher.cpp  qos_args.hpp  run_with_capture.sh  subscriber.cpp
examples/helloworld/: CMakeLists.txt  README.md  publisher.cpp  subscriber.cpp
history/: 2026-06-23_2node-test.md  2026-06-23_fastdds-install.md  2026-06-23_rpi4-auto-scenarios.md  2026-06-23_rpi4-fastdds-install.md  2026-06-23_standalone-test.md  README.md
